# mpm-snow-simulation

./: .gitignore  1d.py  2d.py  Cargo.toml  README.md  border.py  const.py  game.py  grid_node.py  helpers.py  main.py  mpm.py  point.py  water_particle.py
snow-mpm-2d/: README.md
snow-mpm-2d/src/: grid.rs  main.rs  params.rs  particle.rs
snow-mpm-3d/: .gitignore  Cargo.toml  README.md
snow-mpm-3d/src/: grid.rs  helpers.rs  main.rs  params.rs  particle.rs  plane.rs
src/: grid.rs  main.rs  params.rs  particle.rs
