[package]
name = "Rust-3d-three-d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
three-d = {version = "0.16.3", features = ["headless"] }
three-d-asset = { version = "0.6", features = ["png"] }
winit = "0.29.4"
lazy_static = "1.4.0"
rand = "0.8.5"
rayon = "1.8.0"